--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,15 @@ services:
             context: .
             dockerfile: Dockerfile.dev
         ports:
-            - '4000:3000'
+            - '3000:3000'
         volumes:
             - /app/node_modules
             - .:/app
+    tests:
+        build:
+            context: .
+            dockerfile: Dockerfile.dev
+        volumes:
+            - /app/node_modules
+            - .:/app
+        command: ['npm', 'run', 'test']
