Added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
     - docker run csoulioti/react-docker npm run test -- --coverage
+
+deploy:
+    provider: elasticbeanstalk
+    region: 'us-east-2'
+    app: 'react-docker'
+    env: 'ReactDocker-env'
+    bucket_name: 'elasticbeanstalk-us-east-2-679975177779'
+    bucket_path: 'react-docker'
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure: '$AWS_SECRET_KEY'
